[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "maivn-shared"
version = "0.1.0"
description = "Shared utilities and core components for Maivn"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Chad Heathcote", email = "developer@maivn.io" }]
keywords = ["maivn", "shared", "utilities"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
]
dependencies = [
    # Shared runtime
    "httpx>=0.28.1",
    "langchain-core>=1.3.2",
    "orjson>=3.11.8",
    "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/maivn_shared"]
include = ["src/maivn_shared/py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
