[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "maivn-shared"
dynamic = ["version"]
description = "Shared contracts, models, and utilities for the mAIvn platform"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Chad Heathcote", email = "developer@maivn.io" }]
keywords = ["maivn", "shared", "utilities", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    # Shared runtime
    "httpx>=0.28.1",
    "idna>=3.15",
    "langchain-core>=1.3.3",
    "langsmith>=0.8.0",
    "orjson>=3.11.8",
    "pydantic>=2.13.3",
    "requests>=2.33.0",
    "urllib3>=2.7.0",
]

[project.urls]
Homepage = "https://maivn.io"
Documentation = "https://developer.maivn.io/docs"
Repository = "https://github.com/mAIvn-developer/maivn-shared"
Issues = "https://github.com/mAIvn-developer/maivn-shared/issues"
Changelog = "https://github.com/mAIvn-developer/maivn-shared/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "pygments>=2.20.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12,<1",
]

[tool.hatch.version]
path = "src/maivn_shared/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/maivn_shared"]
include = ["src/maivn_shared/py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
